--- a/archi_lab.html
+++ b/archi_lab.html
@@ -101,7 +101,9 @@
       </div>  
       <div>
         <section>
-          <center><h1>Comp. Architecture Lab</h1></center>
+           <b><center><h1>Comp. Architecture Lab</h1></center></b>
+          <center><h1>EXPERIMENT NO-1</h1></center>
+<center><h1>To recognize various component</h1></center> 
 Basic computer skills are essential for professionals in all roles and industries. A computer comprises two primary components, namely hardware and software. Knowing the role and utility of different computer components can help you improve your computer skills. In this article, we discuss the different components of a computer and share their purpose in the computer system.<br>
 What are the basic components of a computer?<br>
 Here are the fundamental components of a computer along with their functions:<br>
@@ -137,18 +139,9 @@ A computer has three crucial system software components. These software solution
 These are individual software applications that provide specific functions and features. These applications are usually third-party services and can be based on the computer system and stored in the memory or have a cloud-based operation. Without application software, a computer system would have very little utility. Some popular examples include word processing software, spreadsheet software, presentation software, database management software, editing software and other multimedia software.<br><br>
 <b>14. Utility software-</b><br>
 These are optional but important software components of a computer that help improve its performance, security or utility. These software solutions help manage the computer's memory, files and other applications. They also help customise the interface and desktop, alongside making the computer system safer to use and helping with the recovery process in case of a system failure. Some common examples of utility software applications are anti-virus software, disk management tools, file management software, backup and encryption tools, compression software, disk defragmenter and disk cleaner software.<br><br>
-
-ignals and are available at pin 24 and 25. These signals provide the status of instruction queue. Their conditions are shown in the following table −<br><br>
-
-    <td>0</td>
-    <td>0</td>
-    <td>Interupt acknowledgement</td>
-    </tr>
-    <tr>
-      <td>0</td>
-      <td>0</td> 
-      <td>1</td> 
-      <td>I/O R<table ><b>8086 Pin Diagram</b><br>
+<b><center><h>EXPERIMENT NO- 2</h></center></b>
+<b><center><h>Dismantating and Assembling</h></center></b><br>
+<b>8086 Pin Diagram</b><br>		
 Here is the pin diagram of 8086 microprocessor −<br>
 <img src="img/pin_dig.png" alt="pin_dig" width="300px"><br>
 Let us now discuss the signals in detail −<br>
