--- a/archi.html
+++ b/archi.html
@@ -201,7 +201,7 @@
 <img src="img/instruction_cycle.png" alt="Error" id="img1">
 
           
-<img src="inscycle.png" alt="inscycle" id="img1">
+<img src="img/inscycle.png" alt="inscycle" id="img1">
     <h4>Instruction Cycle :-</h4>
     <p><strong>The total number of clock cycles required to execute an instruction is called the instruction cycle.</strong></p>
     <p>Instruction cycle contains two operations: fetch and execute.</p>
@@ -219,7 +219,7 @@
     <p>The information transformed from one register to another register is represented in symbolic form by the replacement operator and is called Register Transfer.</p>
 
     <h4>Basic Symbols of RTL</h4>
-    <img src="RTLsymbol.png" alt="RTLsymbol" id="img1">
+    <img src="img/RTLsymbol.png" alt="RTLsymbol" id="img1">
 
     <h4>Register Transfer Operations</h4>
     <p>The operation performed on the data stored in the registers is referred to as register transfer operations.</p>
@@ -227,11 +227,11 @@
     <p><strong>1. Simple Transfer – R2 <- R1:</strong> The content of R1 is copied into R2 without affecting the content of R1. It is an unconditional type of transfer operation.</p>
 
     <p><strong>2. Conditional Transfer:</strong></p>
-    <img src="RTL1.png" alt="RTL1" id="img1">
+    <img src="img/RTL1.png" alt="RTL1" id="img1">
     <p>It indicates that if P=1, then the content of R1 is transferred to R2. It is a unidirectional operation.</p>
 
     <p><strong>3. Simultaneous Operations:</strong> If 2 or more operations are to occur simultaneously, then they are separated with a comma (,).</p>
-    <img src="RTL2.png" alt="RTL2" id="img1">
+    <img src="img/RTL2.png" alt="RTL2" id="img1">
     <p>If the control function P=1, then load the content of R1 into R2, and at the same clock, load the content of R2 into R1.</p>
 
 </body>
