--- a/archi_lab.html
+++ b/archi_lab.html
@@ -102,19 +102,34 @@
       <div>
         <section>
            <b><center><h1>Comp. Architecture Lab</h1></center></b>
-          <center><h1>EXPERIMENT NO-1</h1></center>
-<center><h1>To recognize various component</h1></center> 
-Basic computer skills are essential for professionals in all roles and industries. A computer comprises two primary components, namely hardware and software. Knowing the role and utility of different computer components can help you improve your computer skills. In this article, we discuss the different components of a computer and share their purpose in the computer system.<br>
-What are the basic components of a computer?<br>
-Here are the fundamental components of a computer along with their functions:<br>
+          <center><h2>EXPERIMENT NO-1</h2></center>
+<center><h4>To recognize various component</h4></center> 
+Basic computer skills are essential for professionals in all roles and industries. A computer comprises two primary components, namely hardware and software. Knowing the role and utility of different 
+computer components can help you improve your computer skills. In this article, we discuss the different components of a computer and share their purpose in the computer system.<br><br>
+		
+<b>What are the basic components of a computer?</b><br>
+Here are the fundamental components of a computer along with their functions:<br><br>
+		
 <b>1. Central processing unit (CPU)-</b><br>
-The CPU is the primary control centre of the computer, and it facilitates communication and collaboration between different hardware and software computer components. It is also usually the most complex and valuable part of the entire system because of its complicated design and utility. Without the CPU, the other parts of a computer serve no function. The power supply gives the CPU the necessary energy to process different operations. CPUs require regular maintenance, like cleaning, dust removal, checking the fan and ensuring that all circuits are connected. The CPU contains the circuit boards, memory and RAM of a computer.<br><br>
+The CPU is the primary control centre of the computer, and it facilitates communication and collaboration between different hardware and software computer components. It is also usually the most complex and 
+valuable part of the entire system because of its complicated design and utility. Without the CPU, the other parts of a computer serve no function. The power supply gives the CPU the necessary energy to process
+different operations. CPUs require regular maintenance, like cleaning, dust removal, checking the fan and ensuring that all circuits are connected. The CPU contains the circuit boards, memory and RAM of a 
+computer.<br><br>
+		
 <b>2. Motherboard-</b><br>
-The motherboard acts as the central electrical circuit by connecting different parts, distributing power as per energy requirement and delivering information and instructions across the computer system. The motherboard processes the actual exchange of information and data in a computer system and comprises the CPU, memory and secondary storage devices. Motherboards are very sensitive and may malfunction if exposed to high temperatures, pressure or humidity. They require maintenance to check for corrosion and electrical connections.<br><br>
+The motherboard acts as the central electrical circuit by connecting different parts, distributing power as per energy requirement and delivering information and instructions across the computer system.
+The motherboard processes the actual exchange of information and data in a computer system and comprises the CPU, memory and secondary storage devices. Motherboards are very sensitive and may 
+malfunction if exposed to high temperatures, pressure or humidity. They require maintenance to check for corrosion and electrical connections.<br><br>
+		
 <b>3. Random access memory (RAM)-</b><br>
-RAM is the memory space that houses temporary data, processes, information and commands. When you launch a program or use an application, it uses the RAM to stay active and work optimally. Different types of computers may use different RAMs. The higher the RAM in your computer, the more is its processing power and ability to run various applications simultaneously. In many personal computers and laptops, people increase the RAM to complement an update in the operating system or other software. Deleting temporary files and turning off the computer regularly after usage help with efficient RAM utilisation.<br><br>
+RAM is the memory space that houses temporary data, processes, information and commands. When you launch a program or use an application, it uses the RAM to stay active and work optimally. Different types of 
+computers may use different RAMs. The higher the RAM in your computer, the more is its processing power and ability to run various applications simultaneously. In many personal computers and laptops, people 
+increase the RAM to complement an update in the operating system or other software. Deleting temporary files and turning off the computer regularly after usage help with efficient RAM utilisation.<br><br>
+		
 <b>4. Video graphics array port-</b><br>
-A video graphic array (VGA) port is a connector usually present in desktops and other display devices. It is typically present on the side or back of a monitor or display screen and helps share the screen or visuals with another machine. Special VGA cables may be required to facilitate this sharing. You may also require the VGA port to connect a computer or laptop to a projector. The quality of visuals often depends on the number of connectors in the port.
+A video graphic array (VGA) port is a connector usually present in desktops and other display devices. It is typically present on the side or back of a monitor or display screen and helps share the screen or 
+visuals with another machine. Special VGA cables may be required to facilitate this sharing. You may also require the VGA port to connect a computer or laptop to a projector. The quality of visuals often depends
+on the number of connectors in the port.
 Newer video cards may not have a VGA output port, and smaller laptops may also omit them due to their compact design. In such a case, a signal converter may be necessary to connect them to a projector.<br><br>
 <b>5. Power supply-</b><br>
 The power supply port provides electricity that activates the entire computer system. Usually, the power chord is present at the back of the CPU or the PC tower and goes directly into the electricity socket. Places with variable power supplies may use a UPS or uninterrupted power supply unit to ensure that fluctuations do not impact the computer's performance. Many modern personal computers have in-built UPS units. Laptops operate on removable batteries that require charging periodically. The life cycle of laptop batteries is finite, and their performance decreases after a few years.<br><br>
@@ -132,15 +147,18 @@ The printer generates a copy of virtual text or images on paper using ink. For e
 The mouse in a computer is a small device that controls the cursor and gives input to the system. A mouse can be wired or wireless, has left and right click-buttons and usually has a small scrolling wheel to help users navigate a long page. Mouses come in different shapes and sizes and can also be suitable for left or right-handed individuals. They usually require a flat surface to work optimally. Smaller-sized mouse devices are also available for users who want to travel with their computers or laptops.<br><br>
 <b>12. System software-</b><br>
 A computer has three crucial system software components. These software solutions act as an interface between the hardware and other applications and enable you to use the computer easily. These three crucial system software applications are:
-•	Operating system: the foundational software that runs the entire computer, its programs and applications
-•	Language processor: the software that converts all user instructions into a language that the computer can understand
-•	Device drivers: device-specific software that enables different devices, like a printer or mouse, to function<br><br>
+<ol>		
+<li>Operating system: the foundational software that runs the entire computer, its programs and applications</li>
+<li>Language processor: the software that converts all user instructions into a language that the computer can understand</li>
+<li>Device drivers: device-specific software that enables different devices, like a printer or mouse, to function<br><br></li></ol>
+		
 <b>13. Application software-</b><br>
 These are individual software applications that provide specific functions and features. These applications are usually third-party services and can be based on the computer system and stored in the memory or have a cloud-based operation. Without application software, a computer system would have very little utility. Some popular examples include word processing software, spreadsheet software, presentation software, database management software, editing software and other multimedia software.<br><br>
 <b>14. Utility software-</b><br>
 These are optional but important software components of a computer that help improve its performance, security or utility. These software solutions help manage the computer's memory, files and other applications. They also help customise the interface and desktop, alongside making the computer system safer to use and helping with the recovery process in case of a system failure. Some common examples of utility software applications are anti-virus software, disk management tools, file management software, backup and encryption tools, compression software, disk defragmenter and disk cleaner software.<br><br>
-<b><center><h>EXPERIMENT NO- 2</h></center></b>
-<b><center><h>Dismantating and Assembling</h></center></b><br>
+		
+<b><center><h2>EXPERIMENT NO- 2</h2></center></b>
+<b><center><h4>Dismantating and Assembling</h4></center></b><br>
 <b>8086 Pin Diagram</b><br>		
 Here is the pin diagram of 8086 microprocessor −<br>
 <img src="img/pin_dig.png" alt="pin_dig" width="300px"><br>
