--- a/archi_lab.html
+++ b/archi_lab.html
@@ -231,7 +231,7 @@ These are queue status signals and are available at pin 24 and 25. These signals
     <td>1</td>
     <td>1</td>
     <td>Subsequent byte from the queue</td>
-
+  </tr>
 </table >
 
 <br><br>
@@ -250,6 +250,12 @@ These are queue status status signals that provide the status of operation, whic
     <td>0</td>
     <td>Interrupt acknowledgement</td>
     </tr>
+	<tr>
+        <td>0</td> 
+        <td>0</td> 
+        <td>1</td> 
+        <td>I/O read</td> 
+	</tr>
       <tr>
         <td>0</td> 
         <td>1</td> 
