--- a/archi_lab.html
+++ b/archi_lab.html
@@ -302,10 +302,27 @@ When this signal is active, it indicates to the other processors not to ask the 
 <b>RQ/GT1 and RQ/GT0</b><br>
 These are the Request/Grant signals used by the other processors requesting the CPU to release the system bus. When the signal is received by CPU, then it sends acknowledgment. RQ/GT0 has a higher priority than RQ/GT1.<br>
 <img src="img/block_dig.jpg" id="img1">
-
+<center><h1>EXPERIMENT NO-3</h1></center>
+<b><center><h>Study of Motherboard</h></center></b><br>
+<b>Introduction of Basic Input Output System</b><br>
+<img src="img/Plane_dig.png"id="img2"<br>
+<b>asukaur</b><br><br>
+<b>•  Read</b><br>
+<b>•  Discuss</b><br>
+<b>•  Courses</b><br>
+<b>•  Practice</b><br>
+<b>•  Video</b><br>
+When a computer system is turned on it requires a series of initialization and test before the user can work on it. This process is called booting.<br><br>
+<b>Basic Input Output System (BIOS) :</b><br>
+It provides a set of instructions and is responsible for booting the computer. The BIOS performs all the test needed at startup time. These tests are collectively known as Power On Self Test(POST) .The computer contains hardware like keyboard, monitor, disk drives, etc. there functioning requires interfacing with the operating system. The BIOS provides drivers for basic hardware like keyboard and monitor, mouse, etc. The operating system provides hardware for printer, modem, etc. Drivers for some hardware may not be available in the operating system hence these have to be explicitly installed by the user.<br>
+<b>Power On Self Test (POST) :</b><br>
+POST consists of a series of diagnostic test that runs automatically when a user turns on the computer. The actual test may differ depending on the configuration of the BIOS. However, the usual test includes testing of the RAM, keyboard and the disk drives. If these tests are successful the computer boots itself and loads the operating system but if these tests are unsuccessful, the computer reports the errors through a series of beeps to draw the operator’s attention and finally an error message is displayed on the monitor.<br>
+<img src="img/Table_dig.jpg"id="img3"<br><br>
+<b>Location Of BIOS :</b><br>
+BIOS is typically placed in a chip known as Read Only Memory(ROM) that comes with the computer. This ensures that the BIOS will always be available even if the hard disk is formatted or replaced. However, in many cases the content of the ROM is transferred to the RAM when the system is started. This is because the RAM allows quicker access as compared to the ROM. Copying of the content of the ROM to the RAM is known as shadowing.<br>
+<b>Complementary Metal Oxide Semiconductor RAM :</b><br>
+As the BIOS will interface the hardware with the operating system, it will require configurations of the hardware components like hard disk, monitor, etc. This information is permanently saved in an area known as Complementary Metal Oxide Semiconductor Random Access Memory (CMOS RAM). Power is supplied to the CMOS from a small battery so its contents will not be lost after the PC is turned off. Therefore, there is a battery and a small RAM memory on the board which stores information in a permanent manner. The CMOS needs very little power so there is not much of strain on the computer’s battery. Even then the battery is rechargeable is recharged every time the computer is turned on.
       </div><br>
-</body>
-</html>
 
 
 
