--- a/archi_lab.html
+++ b/archi_lab.html
@@ -305,7 +305,7 @@ These are the Request/Grant signals used by the other processors requesting the 
 <center><h1>EXPERIMENT NO-3</h1></center>
 <b><center><h>Study of Motherboard</h></center></b><br>
 <b>Introduction of Basic Input Output System</b><br>
-<img src="img/Plane_dig.png"id="img1"<br>
+<img src="img/Plane_dig.png"id="img1"><br>
 <b>asukaur</b><br><br>
 <b>•  Read</b><br>
 <b>•  Discuss</b><br>
