--- a/math.html
+++ b/math.html
@@ -690,7 +690,7 @@
         <center><b>f(x) = b<sup>x</sup> and g(x) = log<sub>b</sub>x </b></center>
         is that they are inverse of each other.<br>
 
-        <img src="img/log-exp-fn.png " alt="not found" width="250px">
+        <img src="img/log-exp-fn.jpg " alt="not found" width="250px">
 
 
 
