--- a/archi.html
+++ b/archi.html
@@ -296,10 +296,50 @@
             <em>Example:</em> JMP Offset - Jumps to the instruction at the memory address specified by the offset relative to the current program counter.
         </li>
     </ol>
-</body>
-</html>
-</body>
-</html>
+<strong>Fixed Point Number Representation</strong>
+    <p>Fixed point format is derived directly from the decimal number representation. A number is represented as a sequence of digits separated by a radix point, where the digits to the left of the radix point represent the integer part and the digits to the right represent the fraction.</p>
+    <p>Example: 37.65</p>
+    <ul>
+        <li>37 - integer part</li>
+        <li>.</li>
+        <li>65 - fractional part</li>
+    </ul>
 
+    <strong>Signed Binary Number Representation</strong>
+    <p>Represent -15 in the above representation using bit register:</p>
+    <ol>
+        <li>Inside magnitude:</li>
+        <li>In 1s complement:</li>
+        <li>In 2s complement:</li>
+    </ol>
+
+    <strong>Floating Point Number Representation</strong>
+    <p>F = IM × r^e</p>
+    <p>Where:</p>
+    <ul>
+        <li>F - floating number</li>
+        <li>IM - mantissa</li>
+        <li>r - base</li>
+        <li>e - exponent</li>
+    </ul>
+    <p>Represent 1.23 in format using exponents 0, 1, and 2:</p>
+    <ul>
+        <li>1.23 × 10^0 or 1.23E+0</li>
+        <li>0.123 × 10^1 or 0.123E+1</li>
+        <li>0.0123 × 10^2 or 0.0123E+2</li>
+    </ul>
+
+    <strong>Instruction Set</strong>
+    <p>The instruction set in computer architecture is the set of machine-level instructions that a processor can execute.</p>
+    <ol>
+        <li><strong>Arithmetic Instructions:</strong> Perform basic arithmetic operations such as addition, subtraction, multiplication, and division. (e.g., ADD, SUB, MUL, DIV)</li>
+        <li><strong>Logic Instructions:</strong> Perform logical operations such as AND, OR, XOR, NOT, etc.</li>
+        <li><strong>Data Movement Instructions:</strong> Transfer data between registers and memory. (e.g., MOV, LOAD, STORE)</li>
+        <li><strong>Control Transfer Instructions:</strong> Manage the flow of control in a program, including branching and jumping. (e.g., JUMP, BRANCH, CALL, RETURN)</li>
+        <li><strong>Comparison Instructions:</strong> Compare two values and set flags based on the result. (e.g., CMP)</li>
+        <li><strong>Input/Output Instructions:</strong> Perform input and output operations with peripheral devices. (e.g., IN, OUT)</li>
+        <li><strong>Stack Instructions:</strong> Manipulate the stack, including pushing and popping values. (e.g., PUSH, POP)</li>
+        <li><strong>Bit Manipulation Instructions:</strong> Perform operations at the bit level such as shifting and rotating. (e.g., SHIFT, ROTATE)</li>
+    </ol>
 </body>
 </html>
