--- a/math.html
+++ b/math.html
@@ -205,7 +205,7 @@
 
             <b>Q. Convert set builder to Roster<br>
             A = {x | x is an integer such that x<sup>2</sup>=2}<br>
-            sol-</b> A = {&emptyset;}<br><br>
+            sol-</b> A = &emptyset;<br><br>
 
             <b><u><li>Set Identities - </li></u></b>
             <ol>
