--- a/math.html
+++ b/math.html
@@ -276,10 +276,10 @@
 
             <b> Q. Let A,B and C be sets. Show that A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup> <br>
               sol- <br></b>
-              A&Union;(B&Intersection;C)<sup>c</sup> <br> = (A)<sup>c</sup>&Intersection;(B&Intersection;C)<sup>c</sup>     [by De-morgans law] <br>
-              A&Union;(B&Intersection;C)<sup>c</sup> <br> = (B&Intersection;C)<sup>c</sup>&Intersection;(A)<sup>c</sup>     [by Commutative law] <br>
-              A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((B)<sup>c</sup>&Union;(C)<sup>c</sup>)&Intersection;(A)<sup>c</sup>     [by De-morgans law] <br>
-              A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup>     [by Commutative law] <br><br>
+              &DoubleRightArrow; (A&Union;(B&Intersection;C))<sup>c</sup> <br> = (A)<sup>c</sup>&Intersection;(B&Intersection;C)<sup>c</sup>     [by De-morgans law] <br>
+              &DoubleRightArrow; A&Union;(B&Intersection;C)<sup>c</sup> <br> = (B&Intersection;C)<sup>c</sup>&Intersection;(A)<sup>c</sup>     [by Commutative law] <br>
+              &DoubleRightArrow; A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((B)<sup>c</sup>&Union;(C)<sup>c</sup>)&Intersection;(A)<sup>c</sup>     [by De-morgans law] <br>
+              &DoubleRightArrow; A&Union;(B&Intersection;C)<sup>c</sup> <br> = ((C)<sup>c</sup>&Union;(B)<sup>c</sup>)&Intersection;(A)<sup>c</sup>     [by Commutative law] <br><br>
 
             <li><b>The Inclusion-Exclusion principles -<br></b>
               Let, A and B be any finite sets.<br>
