--- a/python.html
+++ b/python.html
@@ -70,7 +70,8 @@
                 <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
                 <li><a class="nav-link dropdown-item" href="archi_lab.html">Comp. Architecture Lab</a></li>
                 <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
-                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
+                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>    
+                <li><a class="nav-link dropdown-item" href="startup.html">Startup</a></li>   
             </ul>
             <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
             </ul>
