--- a/c_language.html
+++ b/c_language.html
@@ -41,7 +41,7 @@
             <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Semister 1</a>
             <ul class="dropdown-menu">
                 <li><a class="nav-link dropdown-item" href="c_language.html">C-Language</a></li>
-                            
+                             
              </ul>
           </li>
           <li class="nav-item dropdown">
@@ -71,7 +71,8 @@
                 <li><a class="nav-link dropdown-item" href="math.html">Mathematics</a></li>     
                 <li><a class="nav-link dropdown-item" href="archi_lab.html">Comp. Architecture Lab</a></li>
                 <li><a class="nav-link dropdown-item" href="web_tech_lab.html">Web Technologies Lab</a></li>
-                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>     
+                <li><a class="nav-link dropdown-item" href="os_lab.html">OS Lab</a></li>    
+                <li><a class="nav-link dropdown-item" href="startup.html">Startup</a></li>   
             </ul>
             <li><a class="nav-link dropdown-item" href="contributers.html"><center>Our Valuable Contributers</center></a></li>
             </ul>
