--- a/c_language.html
+++ b/c_language.html
@@ -23,7 +23,8 @@
 <link rel="icon" href="logo.png" type="image/png">
 <link rel="stylesheet" type="text/css" href="style.css?v=8" />
 <script src="script.js"></script>
- 
+<div id="watermark">@Debuggers</div>
+
 <body> 
   <header class="navbar navbar-expand-md d-flex flex-wrap justify-content-center p-3 mb-2 border-bottom">
     <div class="container-fluid">
