--- a/dbms_important.html
+++ b/dbms_important.html
@@ -101,6 +101,8 @@
 </head>
 
 <body>
+  <div id="watermark">@Debuggers</div>
+
 <hr>
 
 <p><strong>1. Definition of DBMS:</strong> A Database Management System (DBMS) is software that facilitates the creation, organization, retrieval, and management of data in a structured format...</p>
