--- a/mech_mcq.html
+++ b/mech_mcq.html
@@ -81,6 +81,8 @@
     </div>
   </header>
 <div id="body">
+  <div id="watermark">@Debuggers</div>
+
     <center><h1></h1></center>
    <div id="mcq">
     <img style="width: 80%; height:auto;" src="img/assignment.jpg">
