--- a/mech_updated.html
+++ b/mech_updated.html
@@ -90,6 +90,8 @@ table{
       </header>
       
     <div id="body">
+        <div id="watermark">@Debuggers</div>
+
         <div id="up">
             <a href="#" id="goToTopButton" class="go-to-top-button">
               <span><i class="fa fa-arrow-up" aria-hidden="true" id="arrow"></i></span>
